--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "encodeurl": "^1.0.2",
+    "noty": "^3.2.0-beta",
     "npm-git-install": "^0.3.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -16,6 +18,7 @@
     "react-icons": "^4.1.0",
     "react-modal": "^3.12.1",
     "react-newline-to-break": "^1.0.6",
+    "react-notifications-component": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-scroll": "^1.8.1",
