--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "alphanumeric": "github:opudalo/alphanumeric",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "encodeurl": "^1.0.2",
